--- a/C++/模板与泛型.md
+++ b/C++/模板与泛型.md
@@ -10,6 +10,7 @@
     * [全特化](#全特化)
     * [偏特化](#偏特化)
     * [函数模板特化](#函数模板特化)
+* [可变参数模板](#可变参数模板)
 
 ## 模板简要
 ```c++
@@ -335,3 +336,135 @@ void add<int, int>(int a,int b)
     cout << "特化" << endl;
 }
 ```
+## 可变参数模板
+
+* C++ 2.0新特性，模板可以接受任意个数的参数。
+* 三个点号`...`有了特殊意义。
+* 参数可以是任意个数，并且任意类型，类型可以不相同。
+
+**可变参数函数模板**
+```c++
+//终止函数
+void print()
+{
+}
+
+//参数包展开
+template <typename T, typename... Types>
+void print(const T& firstArg,const Types&... args)
+{
+    cout << firstArg << endl;
+    cout << sizeof...(args) << endl;
+    print(args...);
+}
+
+template <typename... Types>
+void print(const Types&... args)
+{
+    cout << sizeof...(args) << endl;
+}
+
+int main(int argc, char* argv[])
+{
+    //可以省略print<>里的内容，函数模板自动推断
+    print(7.5, "hello", bitset<16>(377), 42);
+    return 0;
+}
+```
+* main中的print调用第二个print(第二个print比第三个print更特化)，此print接受一个参数和一个包(不定参数)。因此至少需要一个参数(包可以为空)。
+* 第一个print用来处理第二个print的最后一次调用(最后没有参数了)
+
+**可变参数类模板**
+* **递归继承方式** 与 **递归组合方式** 展开参数包
+    ```c++
+    template<typename... Types>
+    class Myclass
+    {
+    public:
+        Myclass()
+        {
+            cout << "主模板 && 终止模板" << endl;
+        }
+    };
+    ```
+    递归继承方式展开参数包
+    ```c++
+    template<typename T,typename... Types>
+    class Myclass<T, Types...> :public Myclass<Types...>
+    {
+    public:
+        Myclass(T t, Types... types) :Myclass<Types...>(types...)
+        {
+            cout << typeid(T).name() << ":" << t << endl;
+        }
+    };
+    ```
+    递归组合(复合)方式展开参数包
+    ```c++
+    template<typename T,typename... Types>
+    class Myclass<T, Types...>
+    {
+    public:
+        Myclass(T t, Types... types) :m_class(types...)
+        {
+            cout << typeid(T).name() << ":" << t << endl;
+        }
+        Myclass<Types...> m_class;
+    };
+    ```
+    main函数调用
+    ```c++
+    int main(int argc, char* argv[])
+    {
+        //必须显式指定<>中的模板参数
+        Myclass<int, double, char> myc(1, 12.3, 'q');
+        return 0;
+    }
+    ```
+    程序运行结果：
+    >主模板 && 终止模板
+    char:q
+    double:12.3
+    int:1
+* **tuple和递归调用** 展开参数包
+    ```c++
+    template<int count,int maxCount,typename... T>
+    class Myclass
+    {
+    public:
+        static void func(const tuple<T...>& t)
+        {
+            cout << get<count>(t) << endl;
+            Myclass<count + 1, maxCount, T...>::func(t);
+        }
+    };
+
+    //特化版本，用于结束递归调用
+    template<int maxCount, typename... T>
+    class Myclass<maxCount, maxCount, T...>
+    {
+    public:
+        static void func(const tuple<T...>& t)
+        {
+            //空
+        }
+    };
+
+    template<typename... T>
+    void func(const tuple<T...>& t)
+    {
+        Myclass<0, sizeof...(T), T...>::func(t);
+    }
+
+
+    int main(int argc, char* argv[])
+    {
+        tuple<float, int, char> t(12.3f, 100, 'y');
+        func(t);
+        return 0;
+    }
+    ```
+    程序运行结果：
+    >12.3
+    100
+    y
